test/errors/error12.sp
%empty sort.
sorts
#s={f(a)}.
#s2={f(a)}+{a}.
predicates
p(#s1). %s1 is undefined
rules
